# pytest-tox-poetry-example

./: .coverage  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
examples/: json_api.py
src/: calculator.py
tests/: test_add.py  test_calculator.py  test_json_api.py
